Layout Issue sidebar fixed

--- a/client-panel-ui/src/app/layouts/app-layout/app-layout.component.scss
+++ b/client-panel-ui/src/app/layouts/app-layout/app-layout.component.scss
@@ -58,7 +58,7 @@ aside {
   }
   .sidebar li a .nav-label,.sidebar li a .nav-label+span{ display:none;transition: all 0.5s  ease-in-out}
   .sidebar {
-    width: 42px;transition: all 0.5s  ease-in-out;
+    width: 49px;transition: all 0.5s  ease-in-out;
   }
 
   .sidebar > ul > li > a > .icon {
